--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Welcome to the collective repository of public DGCode projects.
+Welcome to the collective repository of public DGCode Projects.
 
 Please make sure to read https://confluence.esss.lu.se/display/DGCODE/CodingFramework before proceeding to use or develop the software.
