--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-Welcome to the collective repository of public DGCode Projects.
+Welcome to the collective repository of public DGCode Projects of the ESS
+Detector Group.
 
-Please make sure to read https://confluence.esss.lu.se/display/DGCODE/CodingFramework before proceeding to use or develop the software.
+Please make sure to read https://confluence.esss.lu.se/display/DGCODE and
+https://mctools.github.io/simplebuild-dgcode/ before proceeding to use or
+develop the software.
+
+Also note that any software added to this repository is added under the
+conditions of the Apache-2.0 license (see the LICENSE file for more
+information).
